# ImageProcessingProject

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.glade
include/: effects.h  file_io.h  gui.h  image.h  menu.h  transformations.h
scripts/: clean.bat
src/: effects.c  file_io.c  gui.c  image.c  main.c  menu.c  transformations.c
